--- a/glow-template-2/src/App.css
+++ b/glow-template-2/src/App.css
@@ -90,22 +90,7 @@ select {
   --text-color: #060606;
 }
 
-/* COMPONTENT STYLING */
 /* MOBILE FIRST */
-/* CONTAINER STYLING */
-.container1 {
-  max-width: 1920;
-  padding: 1em;
-  background-color: var(--color-3);
-  overflow: hidden; /* Hide overflowing content */
-}
-
-.container2 {
-  max-width: 1920;
-  padding: 1em;
-  background-color: var(--color-6);
-  overflow: hidden; /* Hide overflowing content */
-}
 
 /* ******************** */
 /* NAVIGATION COMPONENT */
@@ -376,20 +361,104 @@ button a {
 /* LARGE TABLETS / LAPTOPS */
 @media (min-width: 992px) and (max-width: 1199px) {
   header h1 {
-    font-size: 9rem;
+    font-size: 14rem;
+  }
+
+  /* HERO COMPONENT */
+  .hero-container {
+    padding-bottom: 6em;
+  }
+  .img-container {
+    left: 20%;
+    width: 150%;
+  }
+
+  /* ABOUT COMPONENT */
+  .about-container {
+    display: flex;
+    gap: 2em;
+  }
+  /* ENDORSEMENT COMPONENT */
+  .inner-endorsement-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+  }
+
+  /* RESULTS COMPONENTS */
+  .inner-results-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
   }
 }
 
 /* DESKTOPS */
 @media (min-width: 1200px) and (max-width: 1919px) {
   header h1 {
-    font-size: 9rem;
+    font-size: 14rem;
+  }
+
+  /* HERO COMPONENT */
+  .hero-container {
+    padding-bottom: 6em;
+  }
+  .img-container {
+    left: 20%;
+    width: 150%;
+  }
+
+  /* ABOUT COMPONENT */
+  .about-container {
+    display: flex;
+    gap: 2em;
+  }
+  /* ENDORSEMENT COMPONENT */
+  .inner-endorsement-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+  }
+
+  /* RESULTS COMPONENTS */
+  .inner-results-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
   }
 }
 
 /* EXTRA LARGE SCREENS */
 @media (min-width: 1920px) {
   header h1 {
-    font-size: 9rem;
+    font-size: 16rem;
+  }
+
+  /* HERO COMPONENT */
+  .hero-container {
+    padding-bottom: 6em;
+  }
+  .img-container {
+    left: 20%;
+    width: 150%;
+  }
+
+  /* ABOUT COMPONENT */
+  .about-container {
+    display: flex;
+    gap: 2em;
+  }
+  /* ENDORSEMENT COMPONENT */
+  .inner-endorsement-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+  }
+
+  /* RESULTS COMPONENTS */
+  .inner-results-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
   }
 }
