--- a/glow-template-2/src/App.css
+++ b/glow-template-2/src/App.css
@@ -88,6 +88,10 @@ select {
   --color-5: #a543c1;
   --color-6: #fbfaf8;
   --text-color: #060606;
+  /* other color selections */
+  --button-color: #dd5d55;
+  --box-color: #028090;
+  --background: #fff7e2;
 }
 
 /* MOBILE FIRST */
@@ -122,6 +126,7 @@ select {
 /* ************** */
 
 .hero-container {
+  margin-top: 2em;
   position: relative;
   padding-bottom: 16em;
   display: flex;
@@ -213,10 +218,13 @@ button {
   border-radius: 8px;
   padding: 0.5em 1.5em;
   cursor: pointer;
+  background-color: var(--button-color);
 }
 
 button a {
   text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
 
 /* ********************** */
@@ -227,6 +235,11 @@ button a {
   margin-top: 1em;
 }
 
+.inner-endorsement-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .endorsements-container h2 {
   font-size: 2rem;
 }
@@ -234,11 +247,17 @@ button a {
 .endorsement-1-box,
 .endorsement-2-box {
   margin-top: 1em;
+  display: flex;
+  flex-direction: column;
 }
 
 .endorsement-1-box p,
 .endorsement-2-box p {
   margin-top: 0.5em;
+}
+
+.avatar-img {
+  width: 80px;
 }
 
 /* ********************** */
@@ -335,6 +354,8 @@ button a {
 
 /* SMALL TABLETS */
 @media (min-width: 768px) and (max-width: 991px) {
+  /* HERO COMPONENT */
+
   header h1 {
     font-size: 9rem;
   }
@@ -396,16 +417,22 @@ button a {
 /* DESKTOPS */
 @media (min-width: 1200px) and (max-width: 1919px) {
   header h1 {
-    font-size: 14rem;
+    font-size: 16rem;
   }
 
   /* HERO COMPONENT */
   .hero-container {
     padding-bottom: 6em;
   }
+
+  .inner-hero-container {
+    display: flex;
+    gap: 3em;
+  }
+
   .img-container {
-    left: 20%;
-    width: 150%;
+    left: -5%;
+    width: 190%;
   }
 
   /* ABOUT COMPONENT */
@@ -437,6 +464,11 @@ button a {
   /* HERO COMPONENT */
   .hero-container {
     padding-bottom: 6em;
+  }
+
+  .inner-hero-container {
+    display: flex;
+    gap: 5em;
   }
   .img-container {
     left: 20%;
