--- a/glow-template-2/src/index.css
+++ b/glow-template-2/src/index.css
@@ -35,6 +35,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  background-color: var(--color-6);
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
@@ -77,6 +78,12 @@ select {
   }
 }
 
+:root {
+  --button-color: #dd5d55;
+  --box-color: #028090;
+  --background: #fff7e2;
+}
+
 /* GLOBAL STYLING */
 
 /* CONTAINER STYLING */
@@ -84,17 +91,18 @@ select {
 .container {
   max-width: 1920px;
   padding: 1em;
-  background-color: var(--color-3);
+  background-color: var(--background);
   overflow: hidden; /* Hide overflowing content */
 }
 
 .container1 {
   margin: 0 auto;
-
   max-width: 1199px;
   padding: 1em;
-  background-color: var(--color-3);
+  background-color: var(--box-color);
   overflow: hidden; /* Hide overflowing content */
+  border-radius: 8px;
+  color: white;
 }
 
 .container2 {
