--- a/glow-template-2/src/App.css
+++ b/glow-template-2/src/App.css
@@ -256,8 +256,19 @@ button a {
   margin-top: 0.5em;
 }
 
+.endorsement-image-box {
+  margin-top: 0.5em;
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.endorsement-image-box p {
+  font-size: 0.8rem;
+}
+
 .avatar-img {
-  width: 80px;
+  width: 50px;
 }
 
 /* ********************** */
@@ -347,6 +358,7 @@ button a {
 
 /* HERO ADJUSTMENT */
 @media (min-width: 598px) and (max-width: 767px) {
+  /* HERO COMPONENT */
   header h1 {
     font-size: 8rem;
   }
@@ -376,6 +388,11 @@ button a {
     display: flex;
     flex-direction: row;
     gap: 2em;
+  }
+
+  .bottom-block {
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -412,6 +429,10 @@ button a {
     flex-direction: row;
     gap: 2em;
   }
+  .bottom-block {
+    display: flex;
+    align-items: center;
+  }
 }
 
 /* DESKTOPS */
@@ -427,7 +448,14 @@ button a {
 
   .inner-hero-container {
     display: flex;
-    gap: 3em;
+    flex-direction: column;
+    gap: 1em;
+  }
+
+  header p {
+    margin-top: 0.5em;
+    font-size: 1.1rem;
+    max-width: 100%;
   }
 
   .img-container {
@@ -440,6 +468,12 @@ button a {
     display: flex;
     gap: 2em;
   }
+
+  .bottom-block {
+    display: flex;
+    align-items: center;
+  }
+
   /* ENDORSEMENT COMPONENT */
   .inner-endorsement-container {
     display: flex;
@@ -468,11 +502,21 @@ button a {
 
   .inner-hero-container {
     display: flex;
-    gap: 5em;
+    flex-direction: column;
+    gap: 1em;
   }
+
+  header p {
+    margin-top: 0.5em;
+    font-size: 1.1rem;
+    max-width: 100%;
+  }
+
   .img-container {
     left: 20%;
     width: 150%;
+    height: 100%;
+    background-size: 500px;
   }
 
   /* ABOUT COMPONENT */
@@ -480,6 +524,12 @@ button a {
     display: flex;
     gap: 2em;
   }
+
+  .bottom-block {
+    display: flex;
+    align-items: center;
+  }
+
   /* ENDORSEMENT COMPONENT */
   .inner-endorsement-container {
     display: flex;
