--- a/glow-template-2/src/index.css
+++ b/glow-template-2/src/index.css
@@ -35,7 +35,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  background-color: var(--color-6);
+  background-color: var(--background);
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
@@ -93,6 +93,7 @@ select {
   padding: 1em;
   background-color: var(--background);
   overflow: hidden; /* Hide overflowing content */
+  border-bottom: 8px solid #dd5d55;
 }
 
 .container1 {
@@ -109,6 +110,6 @@ select {
   margin: 0 auto;
   max-width: 1199px;
   padding: 1em;
-  background-color: var(--color-6);
+  background-color: var(--background);
   overflow: hidden; /* Hide overflowing content */
 }
