--- a/glow-template-2/src/App.css
+++ b/glow-template-2/src/App.css
@@ -335,6 +335,86 @@ blockquote h4 {
   width: 100px;
 }
 
+/* *****************/
+/* CONTACT COMPONENT */
+/* *************** */
+
+.contact-container {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding-top: 2em;
+}
+
+.contact-container h2 {
+  font-size: 2.5rem;
+  position: relative;
+}
+
+.contact-container h2::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 5px;
+  width: 20%;
+  height: 5px;
+  background-color: white;
+}
+
+.form-style {
+  margin-top: 2em;
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+}
+
+input[type="text"],
+[type="email"] {
+  margin-top: 0.5em;
+  padding: 0.5em;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid black;
+  background-color: var(--bg-color);
+  cursor: pointer;
+}
+
+textarea {
+  margin-top: 0.5em;
+  padding: 0.5em;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid black;
+  background-color: var(--bg-color);
+  cursor: pointer;
+}
+
+.label-style {
+  font-weight: bold;
+}
+
+.submit-btn {
+  padding: 0.5em;
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 8px;
+  background-color: var(--button-color);
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* form error styling */
+
+.error-message {
+  color: var(--highlight-text);
+}
+
 /* **************** */
 /* FOOTER COMPONENT */
 /* **************** */
