files commited to github

--- a/glow-template-2/src/App.css
+++ b/glow-template-2/src/App.css
@@ -412,7 +412,7 @@ textarea {
 /* form error styling */
 
 .error-message {
-  color: var(--highlight-text);
+  color: var(--button-color);
 }
 
 /* **************** */
